--- a/.env.default
+++ b/.env.default
@@ -1,2 +1,10 @@
 # use this file to set the $PORT varibale for foreman so the Profile command has the correct $PORT available
 export $PORT=5000
+export $HOST=0.0.0.0
+
+INSTA_CLIENT_ID=
+INSTA_CLIENT_SECRET=
+INSTA_REDIRECT_URL=
+
+FOURSQUARE_CLIENT_ID=
+FOURSQUARE_CLIENT_SECRET=
